--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "ETH Prague hackaton app",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "dotenv": "^16.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
