--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
