--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@material-ui/core": "^4.12.4",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "history": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
