--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "NFT meetup",
-  "name": "Accenture meetup",
+  "short_name": "ETH Prague hackathon app",
+  "name": "ETH Prague hackathon app",
   "icons": [
     {
       "src": "favicon.ico",
