--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "history": "^5.3.0",
+    "moralis": "^1.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moralis": "^1.4.0",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-redux": "^7.2.4",
     "react-router-dom": "5.2.0",
